feat: wip permissions implementation

--- a/src/templates/docdb/view_document.html
+++ b/src/templates/docdb/view_document.html
@@ -2,7 +2,7 @@
 {% from "docdb/snippets/document.html" import render_document_table, render_document_authors, render_document_topics %}
 {% from "docdb/snippets/user.html" import render_user %}
 {% from "docdb/snippets/file.html" import render_files %}
-{% from "docdb/snippets/moderation.html" import render_moderation_options %}
+{% from "docdb/snippets/moderation.html" import render_moderation_options with context %}
 {% from "docdb/snippets/topic.html" import render_topics %}
 {% from "docdb/snippets/author.html" import render_authors %}
 {% block title %}
