--- a/src/templates/docdb/snippets/moderation.html
+++ b/src/templates/docdb/snippets/moderation.html
@@ -1,18 +1,22 @@
 {% from "docdb/snippets/render_map.html" import get_readable_model_name %}
 {% macro render_moderation_options(model) %}
     {% set model_name = model.__class__.__name__ %}
-    <div class="btn-group mb-2" role="group">
-        <a class="btn btn-secondary"
-           href="{{ url_for('admin_' ~ model_name ~ '.edit_view', id=model.id, url=request.full_path) }}">
-            <i class="fas fa-edit"></i>
-            Edit {{ get_readable_model_name(model_name) }}
-        </a>
-        <form action="{{ url_for('admin_' ~ model_name ~ '.delete_view', id=model.id, url=request.args.get('url') or url_for('index.index')) }}"
-              method="post">
-            <button class="btn btn-danger" type="submit">
-                <i class="fas fa-trash"></i>
-                Delete {{ get_readable_model_name(model_name) }}
-            </button>
-        </form>
+    <div class="d-flex gap-2" role="group">
+        {% if permission_check(model, RolePermission.EDIT) %}
+            <a class="btn btn-secondary mb-2"
+               href="{{ url_for('admin_' ~ model_name ~ '.edit_view', id=model.id, url=request.full_path) }}">
+                <i class="fas fa-edit"></i>
+                Edit {{ get_readable_model_name(model_name) }}
+            </a>
+        {% endif %}
+        {% if permission_check(model, RolePermission.REMOVE) %}
+            <form action="{{ url_for('admin_' ~ model_name ~ '.delete_view', id=model.id, url=request.args.get('url') or url_for('index.index')) }}"
+                  method="post">
+                <button class="btn btn-danger mb-2" type="submit">
+                    <i class="fas fa-trash"></i>
+                    Delete {{ get_readable_model_name(model_name) }}
+                </button>
+            </form>
+        {% endif %}
     </div>
 {% endmacro %}
