feat: secure pagination queries and attach organization_id to document model

--- a/src/templates/docdb/new_document.html
+++ b/src/templates/docdb/new_document.html
@@ -6,7 +6,7 @@
         {{ form.csrf_token() }}
         {{ render_field(form.title) }}
         {{ render_field(form.abstract) }}
-        {{ render_form_row([form.authors, form.topics]) }}
+        {{ render_form_row([form.authors, form.topics, form.organization]) }}
         {{ render_form_row([form.document_type, form.files]) }}
         {{ render_field(form.submit) }}
     </form>
