feat: permissions & security done for all views - also add no role view for users with no roles

--- a/src/templates/docdb/snippets/user.html
+++ b/src/templates/docdb/snippets/user.html
@@ -69,7 +69,7 @@
             {% for role in roles %}
                 <tr>
                     <td>{{ role.name }}</td>
-                    <td>{{ role.description }}</td>
+                    <td>{{ role.organization.name }}</td>
                     <td>
                         <ul class="ps-1">
                             {% for permission in role.permissions %}
