feat: add super admin role for initial migration, and typo fixes

--- a/src/templates/docdb/no_role.html
+++ b/src/templates/docdb/no_role.html
@@ -6,7 +6,7 @@
     <p>Welcome to ENRG DocDB!</p>
     <ul>
         <li>
-            You currently have <strong>no roles</strong>, which means you are not authorized to access any organizations.
+            You currently have <strong>no roles</strong>, which means you are not authorized to access any organization.
         </li>
         <li>Please contact your administrator to grant you access.</li>
     </ul>
