--- a/src/templates/docdb/snippets/user.html
+++ b/src/templates/docdb/snippets/user.html
@@ -45,7 +45,7 @@
                     <i class="fas fa-user"></i> Role
                 </th>
                 <th>
-                    <i class="fas fa-university"></i>
+                    <i class="fas fa-building"></i>
                     Organization
                 </th>
                 <th>
@@ -89,7 +89,7 @@
         <thead>
             <tr>
                 <th style="min-width: 200px;">
-                    <i class="fas fa-university"></i> Organization
+                    <i class="fas fa-building"></i> Organizations
                 </th>
                 <th>
                     <i class="fas fa-calendar-alt"></i> Date Registered
