--- a/src/templates/docdb/view_author.html
+++ b/src/templates/docdb/view_author.html
@@ -1,11 +1,35 @@
 {% extends "docdb/base.html" %}
 {% from "docdb/snippets/render_map.html" import render_paginated_result %}
+{% from "docdb/snippets/author.html" import render_institution %}
 {% from "docdb/snippets/moderation.html" import render_moderation_options with context %}
 {% block title %}
     {{ author.name }} - ENRG DocDB
 {% endblock title %}
 {% block content %}
     <h2>View Author</h2>
+    <hr>
+    <table class="table table-striped table-hover">
+        <tr>
+            <th style="width: 25%">First Name</th>
+            <td>{{ author.first_name }}</td>
+        </tr>
+        <tr>
+            <th>Last Name</th>
+            <td>{{ author.last_name }}</td>
+        </tr>
+        <tr>
+            <th>Email</th>
+            <td>{{ author.email }}</td>
+        </tr>
+        <tr>
+            <th>Phone</th>
+            <td>{{ author.phone }}</td>
+        </tr>
+        <tr>
+            <th>Institution</th>
+            <td>{{ render_institution(author.institution) }}</td>
+        </tr>
+    </table>
     <p class="text-muted">
         Below are the documents authored by <strong class="text-primary">{{ author.name }}</strong>.
     </p>
