feat: add authors and fix documents table in view institution page

--- a/src/templates/docdb/view_institution.html
+++ b/src/templates/docdb/view_institution.html
@@ -12,4 +12,9 @@
     {{ render_moderation_options(institution) }}
     <hr>
     {{ render_paginated_result(documents) }}
+    <p class="text-muted">
+        Below are the authors associated with <strong class="text-primary">{{ institution.name }}</strong>.
+    </p>
+    <hr>
+    {{ render_paginated_result(authors) }}
 {% endblock content %}
