refactor: change path of `user_files.js`

--- a/src/templates/docdb/snippets/user_files.html
+++ b/src/templates/docdb/snippets/user_files.html
@@ -1,5 +1,5 @@
 {% macro initialize_user_files(user_files) %}
-    <script src="{{ url_for('static', filename='user_files.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/user_files.js') }}"></script>
     <style>
         input[type="file"] {
             display: none;
