--- a/src/templates/security/login_user.html
+++ b/src/templates/security/login_user.html
@@ -3,6 +3,16 @@
 {% block content %}
     {% include "security/_messages.html" %}
     <h1>{{ _fsdomain("Login") }}</h1>
+    {% if security.oauthglue %}
+        <hr class="fs-gap">
+        <h2>{{ _fsdomain("Use Social Oauth to Sign In") }}</h2>
+        <a href="{{ get_slack_oauth_url() }}">
+            <img src="{{ url_for('static', filename='images/slack.png') }}"
+                 alt="Slack"
+                 style="width: 2rem; height: 2rem;">
+            Sign In Using Slack
+        </a>
+    {% endif %}
     <form action="{{ url_for_security("login") }}{{ prop_next() }}"
           method="post"
           name="login_user_form">
@@ -30,11 +40,6 @@
                        formaction="{{ url_for_security("wan_signin") }}{{ prop_next() }}">
             </form>
         </div>
-    {% endif %}
-    {% if security.oauthglue %}
-        <hr class="fs-gap">
-        <h2>{{ _fsdomain("Use Social Oauth to Sign In") }}</h2>
-        <a href="{{ get_slack_oauth_url() }}">Sign In Using Slack</a>
-    {% endif %}
+    {% endif %} 
     {% include "security/_menu.html" %}
 {% endblock content %}
