fix: update Slack logo image in login template

--- a/src/templates/security/login_user.html
+++ b/src/templates/security/login_user.html
@@ -7,7 +7,7 @@
         <hr class="fs-gap">
         <h2>{{ _fsdomain("Use Social Oauth to Sign In") }}</h2>
         <a href="{{ get_slack_oauth_url() }}">
-            <img src="{{ url_for('static', filename='images/slack.png') }}"
+            <img src="{{ url_for('static', filename='images/slack-logo.png') }}"
                  alt="Slack"
                  style="width: 2rem; height: 2rem;">
             Sign In Using Slack
