feat: add primary button class to Slack OAuth link

--- a/src/templates/security/login_user.html
+++ b/src/templates/security/login_user.html
@@ -6,10 +6,10 @@
     {% if security.oauthglue %}
         <hr class="fs-gap">
         <h2>{{ _fsdomain("Use Social Oauth to Sign In") }}</h2>
-        <a href="{{ get_slack_oauth_url() }}">
+        <a href="{{ get_slack_oauth_url() }}" class="btn btn-primary">
             <img src="{{ url_for('static', filename='images/slack-logo.png') }}"
                  alt="Slack"
-                 style="width: 2rem; height: 2rem;">
+                 style="width: 1.5rem; height: 1.5rem;">
             Sign In Using Slack
         </a>
     {% endif %}
