--- a/src/templates/docdb/snippets/moderation.html
+++ b/src/templates/docdb/snippets/moderation.html
@@ -11,6 +11,7 @@
         {% endif %}
         {% if permission_check(model, RolePermission.REMOVE) %}
             <form action="{{ url_for('admin_' ~ model_name ~ '.delete_view', id=model.id, url=request.args.get('url') or url_for('index.index')) }}"
+                  onsubmit="return confirm(`Are you sure you want to delete this? This action cannot be undone.`);"
                   method="post">
                 <button class="btn btn-danger" type="submit">
                     <i class="fas fa-trash"></i>
