--- a/src/templates/docdb/snippets/render_map.html
+++ b/src/templates/docdb/snippets/render_map.html
@@ -18,7 +18,7 @@
 {% set model_name_override_map = {"DocumentFile": "File", "DocumentType": "Document Type"} %}
 {% macro render_paginated_result(paginated) %}
     {% set render_func = render_func_map[paginated.query_model] %}
-    {{ render_func(paginated.result) }}
+    <div class="table-responsive">{{ render_func(paginated.result) }}</div>
     {{ render_pagination(paginated) }}
 {% endmacro %}
 {% macro get_readable_model_name(model_name) %}
