feat: finished event module - create events - each event has sessions and each session has talks - documents can be attached to talks

--- a/src/templates/docdb/snippets/render_map.html
+++ b/src/templates/docdb/snippets/render_map.html
@@ -4,6 +4,7 @@
 {% from "docdb/snippets/topic.html" import render_topic_table %}
 {% from "docdb/snippets/user.html" import render_user_table, render_role_table, render_organization_table %}
 {% from "docdb/snippets/file.html" import render_file_table %}
+{% from "docdb/snippets/event.html" import render_event_table %}
 {% set render_func_map = {
     "Document": render_document_table,
     "Author": render_author_table,
@@ -13,7 +14,8 @@
     "DocumentFile": render_file_table,
     "DocumentType": render_document_type_table,
     "Role": render_role_table,
-    "Organization": render_organization_table
+    "Organization": render_organization_table,
+    "Event": render_event_table,
 } %}
 {% set model_name_override_map = {"DocumentFile": "File", "DocumentType": "Document Type"} %}
 {% macro render_paginated_result(paginated) %}
