--- a/src/templates/docdb/snippets/event.html
+++ b/src/templates/docdb/snippets/event.html
@@ -79,3 +79,50 @@
         </tbody>
     </table>
 {% endmacro %}
+{% macro render_event_calendar(events) %}
+    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js'></script>
+    <script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var calendarEl = document.getElementById('calendar');
+        var events = JSON.parse(`[
+            {% for event in events %}
+                {
+                    "title": "{{ event.title }}",
+                    "start": "{{ event.date }}",
+                    "url": "{{ url_for('event.view', event_id=event.id) }}"
+                }
+                {% if not loop.last %},{% endif %}
+            {% endfor %}
+        ]`);
+
+        // Add timezone offset hours to start time
+        for (const event of events) {
+            event.start = moment(event.start).add(getTimezoneOffsetHours(), "hours").toDate();
+        }
+      
+        var calendar = new FullCalendar.Calendar(calendarEl, {
+          initialView: 'dayGridMonth',
+          headerToolbar: {
+            left: 'prev,next today',
+            center: 'title',
+            right: 'dayGridMonth,timeGridWeek,timeGridDay'
+          },
+          events: events,
+          eventTimeFormat: { // like '14:30:00'
+            hour: '2-digit',
+            minute: '2-digit',
+            hour12: false
+          }
+        });
+      
+        calendar.render();
+      });
+    </script>
+    <div id="calendar"></div>
+    <style>
+        #calendar a {
+            text-decoration: none;
+            color: black;
+        }
+    </style>
+{% endmacro %}
