feat: make start_time nullable in event models and templates

--- a/src/templates/docdb/view_event.html
+++ b/src/templates/docdb/view_event.html
@@ -115,7 +115,11 @@
                                 <tbody>
                                     {% for note in session.talk_notes %}
                                         <tr>
-                                            <td>{{ note.start_time.strftime("%H:%M") }}</td>
+                                            <td>
+                                                {% if note.start_time %}
+                                                    {{ note.start_time.strftime("%H:%M") }}
+                                                {% endif %}
+                                            </td>
                                             <td>{{ note.talk_title }}</td>
                                             <td>
                                                 {% if note.document %}
