feat: add child topics relationship and update topic display with hierarchy

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -53,4 +53,12 @@
             <div class="text-center p-3 bg-dark text-white">2024 - ENRG DocDB</div>
         </footer>
     </body>
+    <style>
+        tr.light > td{
+            background-color: rgb(242, 242, 242)
+        }
+        td.light {
+            background-color: rgb(242, 242, 242) !important;
+        }
+    </style>
 </html>
