--- a/src/templates/docdb/snippets/topic.html
+++ b/src/templates/docdb/snippets/topic.html
@@ -1,7 +1,7 @@
 {% from "docdb/snippets/pagination.html" import render_pagination %}
 {% macro render_topic_table(topics, paginated_query) %}
     {% from "docdb/snippets/pagination.html" import render_pagination %}
-    <table class="table table-striped table-hover">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th style="min-width: 200px;">
@@ -19,9 +19,19 @@
                 </tr>
             {% endif %}
             {% for topic in topics %}
-                <tr>
-                    <td>{{ render_topics([topic]) }}</td>
-                </tr>
+                {% if not topic.parent_topic %}
+                    <tr class="border-top-0 light">
+                        <td>{{ render_topics([topic]) }}</td>
+                    </tr>
+                    {% for child_topic in topic.child_topics %}
+                        <tr>
+                            <td>
+                                <i class="fas fa-chevron-right"></i>
+                                {{ render_topics([child_topic]) }}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                {% endif %}
             {% endfor %}
         </tbody>
     </table>
