--- a/src/templates/docdb/snippets/user.html
+++ b/src/templates/docdb/snippets/user.html
@@ -13,6 +13,7 @@
                     <i class="fas fa-user"></i> User
                 </th>
                 <th>E-mail</th>
+                <th>Roles</th>
                 <th>
                     <i class="fas fa-calendar-alt"></i> Date Registered
                 </th>
@@ -31,6 +32,7 @@
                 <tr>
                     <td>{{ render_user(user) }}</td>
                     <td>{{ user.email }}</td>
+                    <td>{{ render_user_roles(user) }}</td>
                     <td>{{ user.create_datetime.strftime("%Y-%m-%d %H:%M:%S") }}</td>
                 </tr>
             {% endfor %}
@@ -115,4 +117,10 @@
             {% endfor %}
         </tbody>
     </table>
+{% endmacro %}
+{% macro render_user_roles(user) %}
+    {% for role in user.roles %}
+        {{ role }}
+        {% if not loop.last %}·{% endif %}
+    {% endfor %}
 {% endmacro %}
