--- a/src/templates/docdb/snippets/user.html
+++ b/src/templates/docdb/snippets/user.html
@@ -12,8 +12,14 @@
                 <th style="min-width: 200px;">
                     <i class="fas fa-user"></i> User
                 </th>
-                <th>E-mail</th>
-                <th>Roles</th>
+                <th>
+                    <i class="fas fa-envelope"></i>
+                    E-mail
+                </th>
+                <th>
+                    <i class="fas fa-user-tag"></i>
+                    Roles
+                </th>
                 <th>
                     <i class="fas fa-calendar-alt"></i> Date Registered
                 </th>
