--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -25,10 +25,19 @@
         {% endblock head %}
     </head>
     <body class="d-flex flex-column min-vh-100">
-        <div class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+        <div class="navbar navbar-expand-lg bg-primary pt-2 pb-2"
+             data-bs-theme="dark">
             <div class="container">
                 {% block nav_brand %}
-                    <a class="navbar-brand" href="{{ url_for("index.index") }}">ENRG DocDB</a>
+                    <a class="navbar-brand d-flex align-items-center gap-2"
+                       href="{{ url_for("index.index") }}">
+                        <img src="{{ url_for('static', filename='images/favicon.jpg') }}"
+                             width="50"
+                             height="50"
+                             class="d-inline-block align-top"
+                             alt="">
+                        ENRG DocDB
+                    </a>
                 {% endblock nav_brand %}
                 <button class="navbar-toggler"
                         type="button"
@@ -50,7 +59,7 @@
             {% endblock content %}
         </div>
         <footer class="bg-light text-center text-lg-start mt-auto">
-            <div class="text-center p-3 bg-dark text-white">2024 - ENRG DocDB</div>
+            <div class="text-center p-3 bg-dark text-white">2025 - ENRG DocDB</div>
         </footer>
     </body>
     <style>
